--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "firebase": "^4.6.0",
+    "bulma": "^0.6.1",
+    "firebase": "^4.6.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-event-calendar": "^1.5.1",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
