--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
   "dependencies": {
     "bulma": "^0.6.1",
     "firebase": "^4.6.2",
-    "vue": "^2.5.2",
+    "vue": "^2.5.6",
     "vue-event-calendar": "^1.5.1",
+    "vue-photo-grid": "^1.1.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
