--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "sweet-modal-vue": "^2.0.0",
-    "vue": "^2.5.6",
+    "vue": "^2.5.8",
     "vue-event-calendar": "^1.5.1",
+    "vue-loader": "^13.5.0",
     "vue-photo-grid": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue2-google-maps": "^0.8.4",
