--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bulma": "^0.6.1",
     "firebase": "^4.6.2",
+    "mdi": "^2.0.46",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "sweet-modal-vue": "^2.0.0",
