--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "bulma": "^0.6.1",
     "firebase": "^4.6.2",
     "mdi": "^2.0.46",
