--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "vue-event-calendar": "^1.5.1",
     "vue-photo-grid": "^1.1.0",
     "vue-router": "^3.0.1",
+    "vue-web-cam": "^1.0.4",
     "vue-webcam": "^2.0.4",
     "vue2-google-maps": "^0.8.4",
+    "vuejs-dialog": "^0.4.5",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -81,6 +83,7 @@
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
+    "vue-devtools": "^3.1.9",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.8",
