--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.17.1",
     "bulma": "^0.6.1",
     "firebase": "^4.6.2",
+    "mdi": "^2.0.46",
     "node-sass": "^4.7.2",
     "postcss-import": "^11.0.0",
     "sass-loader": "^6.0.6",
